--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="Justoneplus/Just One+.js?UDEYB=230506342"></script>
+        <script type="text/javascript" src="Justoneplus/Just One+.js?MDZAC=897797964"></script>
         <script>window.onload = GameMaker_Init;</script>
     </body>
 </html>
